logs/zenoss.toolbox.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zenoss'...
Listing './lib/python3.5/site-packages/zenoss/toolbox'...
Compiling './lib/python3.5/site-packages/zenoss/toolbox/findposkeyerror.py'...
***   File "./lib/python3.5/site-packages/zenoss/toolbox/findposkeyerror.py", line 49
    print "/tmp doesn't exist - aborting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zenoss/toolbox/output'...
Compiling './lib/python3.5/site-packages/zenoss/toolbox/zencatalogscan.py'...
***   File "./lib/python3.5/site-packages/zenoss/toolbox/zencatalogscan.py", line 34
    print "/tmp doesn't exist - aborting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zenoss/toolbox/zenindextool.py'...
***   File "./lib/python3.5/site-packages/zenoss/toolbox/zenindextool.py", line 36
    print "/tmp doesn't exist - aborting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zenoss/toolbox/zennetworkclean.py'...
***   File "./lib/python3.5/site-packages/zenoss/toolbox/zennetworkclean.py", line 35
    print "/tmp doesn't exist - aborting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zenoss/toolbox/zenrelationscan.py'...
***   File "./lib/python3.5/site-packages/zenoss/toolbox/zenrelationscan.py", line 43
    print "/tmp doesn't exist - aborting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zenoss/toolbox/zodbscan.py'...
***   File "./lib/python3.5/site-packages/zenoss/toolbox/zodbscan.py", line 50
    print "/tmp doesn't exist - aborting"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zenoss.toolbox-0.5.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
